# HETerogeneous-vectorized-or-Parallel

./: CHANGELOG.md  CMakeLists.txt  README.md
CMakeScripts/: HETP-Helpers.cmake
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  hetp_mod.F90  mach_hetp_mod.F90
src/Test/: CMakeLists.txt  hetp_main.F90
